# Destiny2ManifestAPI

./: .gitignore  pyproject.toml  run.py
src/destiny2_manifest_api/: .env.dev  asgi.py  config.py
src/destiny2_manifest_api/app/: __init__.py
src/destiny2_manifest_api/app/apis/: lore.py  weapon.py
src/destiny2_manifest_api/app/models/: InventoryItem.py  __init__.py  base_model.py  inventory_item.py  lore.py  plug_set.py  socket_category.py  stat.py
src/destiny2_manifest_api/app/orms/: InventoryItem.py
src/destiny2_manifest_api/tasks/: __init__.py  deprecated_fetch_manifest.py  fetch_manifest.py
src/destiny2_manifest_api/utils/: __init__.py  constants.py  functions.py  logging.py
